[package]
name = "standing-relations-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "*"
derivative = "*"
index_list = "*"
slice-group-by = "*"
uuid = { version = "*", features = ["v4"] }
