[package]
name = "standing-relations-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "*"
derivative = "*"
generic_map.path = "../generic_map"
index_list = "*"
log = { version = "*", optional = true }
redis = { version = "*", optional = true }
slice-group-by = "*"
uuid = { version = "*", features = ["v4"] }

[features]
redis = ["dep:log", "dep:redis"]
